[package]
name = "supertrade_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24.0"
egui_plot = "0.24.0"
pyo3 = { version = "0.20.0", features = ["auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }
